Media Controls: Enable test on Mac OS X

The tests were disabled previously and now can be enabled.

BUG=783154

Change-Id: I1d1ccb1a61bd1da867e8bd4c7e6157d726aef37a